Tue Apr 29 19:11:45 1997  Tom Tromey  <tromey@cygnus.com>

	* mdate-sh: New version from Ulrich Drepper.

Mon Apr 28 01:18:05 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Makefile only depends on
	BUILT_SOURCES when generating dependencies.

	* Released 1.1o.

Sun Apr 27 23:58:20 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist): Use variable_value, not
	variable_contents.

Wed Apr 23 14:04:28 1997  Ian Lance Taylor  <ian@cygnus.com>

	* automake.in (IF_PATTERN): Define.
	(ELSE_PATTERN, ENDIF_PATTERN): Define.
	(AM_CONDITIONAL_PATTERN): Define.
	(%configure_cond): New global hash table.
	(handle_source_transform): If xx_SOURCES is defined conditionally,
	define xx_OBJECTS using the same conditions.
	(handle_lib_objects): If variable is defined conditionally, define
	xx_DEPENDENCIES conditionally.  Most code moved into subroutine.
	(handle_lib_objects_cond): New function, broken out of
	handle_lib_objects.
	(scan_one_configure_file): Look for $AM_CONDITIONAL_PATTERN.
	(conditional_true_when): New function.
	(variable_defined): Add new parameter: cond.  Change some
	callers.
	(variable_conditions): New function.
	(variable_conditionally_defined): New function.
	(variable_value): New function.  Change most uses of $contents to
	call variable_value instead.
	(value_to_list): New function, from variable_value_as_list.
	(variable_value_as_list): Add new parameter: cond.  Change all
	callers.  Move some code into subroutine value_to_list.
	(define_pretty_variable): Add new parameter: cond.  Change call
	callers.
	(read_am_file): Handle conditionals.
	(initialize_per_input): Initialize %conditional and
	@conditional_stack.
	* m4/cond.m4: New file.
	* m4/Makefile.am (m4data_DATA): Add cond.m4.

Sun Apr 27 11:03:36 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Run automake once per
	directory, instead of once at the top.
	(handle_dist_worker): Changed interface.
	(handle_dist): Likewise.