@@ -2062,7 +2062,7 @@ sub handle_texinfo
 	# get run twice during "make all".
 	unshift (@all, '$(INFO_DEPS)');
     }
-    push (@clean, 'info');
+    push (@clean, 'aminfo');
     push (@info, '$(INFO_DEPS)');
     push (@dvi, '$(DVIS)');
 
