@@ -1,5 +1,8 @@
 Tue Apr 29 19:11:45 1997  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_texinfo): Put `aminfo', not `info' on
+	@clean.
+
 	* mdate-sh: New version from Ulrich Drepper.
 
 Mon Apr 28 01:18:05 1997  Tom Tromey  <tromey@cygnus.com>
